<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/toolbar"
        android:background="@drawable/toolbar_dropshadow"
        android:id="@+id/view" />

    <android.support.v7.widget.CardView
        card_view:cardUseCompatPadding="true"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewTitleDetail"
            android:text="@string/detail_expense"
            android:textColor="@color/primaryColor"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewDetailLabelName"
            android:text="@string/name_expense"
            android:layout_below="@+id/textViewTitleDetail"
            android:textColor="@color/navigationBarColor"
            android:layout_margin="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/textViewDetailName"
            android:text="@string/expense"
            android:layout_below="@+id/textViewTitleDetail"
            android:layout_margin="3dp"
            android:layout_toRightOf="@+id/textViewDetailLabelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewDetailLabelValue"
            android:text="@string/rs_value"
            android:textColor="@color/navigationBarColor"
            android:layout_margin="3dp"
            android:layout_below="@+id/textViewDetailLabelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewDetailValue"
            android:textColor="@color/primaryColor"
            android:layout_margin="3dp"
            android:layout_below="@+id/textViewDetailLabelName"
            android:layout_toRightOf="@+id/textViewDetailLabelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewDetailLabelCategory"
            android:text="@string/Category"
            android:layout_margin="3dp"
            android:layout_below="@+id/textViewDetailLabelValue"
            android:textColor="@color/navigationBarColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewDetailCategory"
            android:text="@string/category_label"
            android:layout_below="@+id/textViewDetailLabelValue"
            android:layout_toRightOf="@+id/textViewDetailLabelCategory"
            android:layout_margin="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewDetailLabelForm"
            android:text="@string/method_payment"
            android:layout_below="@+id/textViewDetailCategory"
            android:layout_margin="3dp"
            android:textColor="@color/navigationBarColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewDetailForm"
            android:text="@string/method"
            android:layout_margin="3dp"
            android:layout_below="@+id/textViewDetailCategory"
            android:layout_toRightOf="@+id/textViewDetailLabelForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewDetailLabelMonth"
            android:text="@string/month_label"
            android:textColor="@color/navigationBarColor"
            android:layout_below="@+id/textViewDetailLabelForm"
            android:layout_margin="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewDetailMonth"
                android:text="@string/month"
                android:layout_margin="3dp"
                android:layout_below="@+id/textViewDetailLabelForm"
                android:layout_toRightOf="@+id/textViewDetailLabelMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewLabelPaid"
            android:text="@string/status_payment"
            android:layout_margin="3dp"
            android:textColor="@color/navigationBarColor"
            android:layout_below="@+id/textViewDetailMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewPaid"
            android:layout_margin="3dp"
            android:layout_toRightOf="@+id/textViewLabelPaid"
            android:layout_below="@+id/textViewDetailMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonEditItem"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/primaryColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_edit"
            android:layout_toLeftOf="@+id/buttonDeleteItem"
            android:layout_below="@+id/textViewLabelPaid" />

        <Button
            android:id="@+id/buttonDeleteItem"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/primaryColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_delete"
            android:layout_below="@+id/textViewLabelPaid"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>