<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/toolbar_dropshadow" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editTextUser"
        android:hint="@string/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextPassWord"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:password="true"/>



    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/new_user"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/primaryColor"
            android:id="@+id/buttonNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/buttonLogin"
            android:layout_toStartOf="@+id/buttonLogin" />

        <Button
            android:text="@string/login"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/buttonLogin"
            android:textColor="@color/primaryColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    </LinearLayout>
</LinearLayout>