<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@id/toolbar"
            android:background="@drawable/toolbar_dropshadow" />

    </RelativeLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            card_view:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <EditText
        android:id="@+id/editTextNewDescriptionReceipe"
        android:textColorHint="@color/hintColor"
        android:hint="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextNewValueReceipe"
        android:hint="@string/value"
        android:inputType="numberDecimal"
        android:textColorHint="@color/hintColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Spinner
        android:id="@+id/spinnerNewTypeReceipe"
        android:prompt="@string/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <Spinner
        android:id="@+id/spinnerNewWalletOrBank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <Button
        android:id="@+id/buttonAddReceipe"
        android:text="@string/save"
        android:textColor="@color/windowBackground"
        android:layout_width="100dp"
        android:background="?attr/colorPrimary"
        android:layout_height="40dp"
        android:layout_gravity="right" />


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>