<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@id/toolbar"
            android:background="@drawable/toolbar_dropshadow" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            card_view:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:text="@string/description"
            android:id="@+id/textViewExpenseDescriptionDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/category"
            android:id="@+id/textViewExpenseCategoryDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewExpenseDescriptionDetail"/>

        <TextView
            android:text="@string/value"
            android:id="@+id/textViewExpenseValueDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewExpenseCategoryDetail"/>


        <TextView
            android:text="date"
            android:id="@+id/textViewExpenseDateDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewExpenseValueDetail"/>
        </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

</LinearLayout>